# Habbit_tracker

./: .env.sample  .gitignore  Dockerfile.sample  README.md  docker-compose.deploy.yml  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
Dockerfiles/nginx/: nginx.conf
Dockerfiles/web/: Dockerfile
config/: settings.py
habits/: models.py  urls.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py
habits/tests/: tests.py
users/: urls.py  views.py
users/management/commands/: createadmin.py
users/migrations/: 0001_initial.py
